--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,13 @@ box-sizing: border-box;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  
 }
 .direita-login > h1{
   color: aqua;
 }
 ;.direita-login > img{
-  width: 35vw;
+  width: 30vw;
 
 }
 .esquerda-login{
@@ -68,7 +69,7 @@ box-sizing: border-box;
   background-color: #514860;
   color: #f0ffffde; 
   font-size: 12pt;
-  box-shadow: 0px 10px 40px #00000056;3
+  box-shadow: 0px 10px 40px #00000056;
   outline: none;
   box-sizing:border-box;
 }
